Responsive Web Design Complete
Complete html and css

--- a/index.html
+++ b/index.html
@@ -3,27 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/utils.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./utils.css" />
     <title>Blog Site</title>
   </head>
   <body>
     <nav class="navigation level-1-width m-auto">
       <div class="navigation-left">
-        <a href="/index.html"
-          ><img class="logo-img" src="./images/blog1.jpg" alt="blog"
-        /></a>
+        <a href="./index.html"><img class="logo-img" src="./blog1.jpg" alt="blog"/></a>
       </div>
       <div class="navigation-right">
-        <a class="font1" href="/about_me.html"
-          ><button class="btn">About Me</button></a
-        >
-        <a class="font1" href="/blog.html"
-          ><button class="btn">Blog Posts</button></a
-        >
-        <a class="font1" href="/search.html"
-          ><button class="btn">Search</button></a
-        >
+        <a class="font1" href="./about_me.html"><button class="btn">About Me</button></a>
+        <a class="font1" href="./blog.html"><button class="btn">Blog Posts</button></a>
+        <a class="font1" href="./search.html"><button class="btn">Search</button></a>
       </div>
     </nav>
     <div class="content level-2-width m-auto">
@@ -46,14 +38,14 @@
         </p>
       </div>
       <div class="content-right">
-        <img src="./images/work.jpg" alt="work" />
+        <img src="./work.jpg" alt="work" />
       </div>
     </div>
     <!-- <div class="level-2-width m-auto"><hr></div> -->
     <div class="font1 level-2-width m-auto homearticles">
       <div class="homearticle">
         <h2>Featured Articles</h2>
-        <img src="/images/kawaiiplant.jpg" alt="article1" />
+        <img src="./kawaiiplant.jpg" alt="article1" />
         <div class="homearticle-content">
           <a href="/blog.html"><h3>Root to leaf</h3></a>
           <span>A Singh</span>
@@ -61,7 +53,7 @@
         </div>
       </div>
       <div class="homearticle">
-        <img src="/images/travel.jpg" alt="article1" />
+        <img src="./travel.jpg" alt="article1" />
         <div class="homearticle-content">
           <a href="/blog.html"><h3>Travel best insights</h3></a>
           <span>K Singh</span>
@@ -69,7 +61,7 @@
         </div>
       </div>
       <div class="homearticle">
-        <img src="/images/furnico.jpg" alt="article1" />
+        <img src="./furnico.jpg" alt="article1" />
         <div class="homearticle-content">
           <a href="/blog.html"><h3>Furnico for tomorrow</h3></a>
           <span>A Singh</span>
@@ -77,7 +69,7 @@
         </div>
       </div>
       <div class="homearticle">
-        <img src="/images/gamers.jpg" alt="article1" />
+        <img src="./gamers.JPG" alt="article1" />
         <div class="homearticle-content">
           <a href="/blog.html"><h3>Sunsets and effects</h3></a>
           <span>A Singh</span>
