--- a/about_me.html
+++ b/about_me.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/utils.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./utils.css" />
     <title>Blog Site</title>
   </head>
   <body>
     <nav class="navigation level-1-width m-auto">
       <div class="navigation-left">
-        <a href="/index.html"
-          ><img class="logo-img" src="./images/blog1.jpg" alt="blog"
+        <a href="./index.html"
+          ><img class="logo-img" src="./blog1.jpg" alt="blog"
         /></a>
       </div>
       <div class="navigation-right">
-        <a class="font1" href="/about_me.html"
+        <a class="font1" href="./about_me.html"
           ><button class="btn">About Me</button></a
         >
-        <a class="font1" href="/blog.html"
+        <a class="font1" href="./blog.html"
           ><button class="btn">Blog Posts</button></a
         >
-        <a class="font1" href="/search.html"
+        <a class="font1" href="./search.html"
           ><button class="btn">Search</button></a
         >
       </div>
@@ -36,7 +36,7 @@
         <p class="font1">Email : singh.ananya597@gmail.com</p>
       </div>
       <div class="content-right">
-        <img src="./images/work.jpg" alt="work" />
+        <img src="./work.jpg" alt="work" />
       </div>
     </div>
     <div class="footer">
