--- a/search.html
+++ b/search.html
@@ -3,51 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/utils.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./utils.css" />
     <title>Blog Site</title>
   </head>
   <body>
     <nav class="navigation level-1-width m-auto">
       <div class="navigation-left">
-        <a href="/index.html"><img class="logo-img" src="./images/blog1.jpg" alt="blog" /></a> 
+        <a href="./index.html"><img class="logo-img" src="./blog1.jpg" alt="blog" /></a> 
       </div>
       <div class="navigation-right">
-        <a class="font1" href="/about_me.html"><button class="btn">About Me</button></a>
-        <a class="font1" href="/blog.html"><button class="btn">Blog Posts</button></a>
-        <a class="font1" href="/search.html"><button class="btn">Search</button></a>
+        <a class="font1" href="./about_me.html"><button class="btn">About Me</button></a>
+        <a class="font1" href="./blog.html"><button class="btn">Blog Posts</button></a>
+        <a class="font1" href="./search.html"><button class="btn">Search</button></a>
       </div>
     </nav>
     <div class="font1 level-2-width m-auto homearticles">
       <div class="homearticle">
         <h2>Search Results for Posts</h2>
-        <img src="/images/kawaiiplant.jpg" alt="article1">
+        <img src="./kawaiiplant.jpg" alt="article1">
         <div class="homearticle-content">
-         <a href="/blog.html"><h3>Root to leaf</h3></a>
+         <a href="./blog.html"><h3>Root to leaf</h3></a>
           <span>A Singh</span>
           <span>5th January | 7 minutes read</span>
         </div>
       </div>
       <div class="homearticle">
-        <img src="/images/travel.jpg" alt="article1">
+        <img src="./travel.jpg" alt="article1">
         <div class="homearticle-content">
-          <a href="/blog.html"><h3>Travel best insights</h3></a>
+          <a href="./blog.html"><h3>Travel best insights</h3></a>
           <span>K Singh</span>
           <span>8th March | 10 minutes read</span>
         </div>
       </div>
       <div class="homearticle">
-        <img src="/images/furnico.jpg" alt="article1">
+        <img src="./furnico.jpg" alt="article1">
         <div class="homearticle-content">
-          <a href="/blog.html"><h3>Furnico for tomorrow</h3></a>
+          <a href="./blog.html"><h3>Furnico for tomorrow</h3></a>
           <span>A Singh</span>
           <span>5th August | 5 minutes read</span>
         </div>
       </div>
       <div class="homearticle">
-        <img src="/images/gamers.jpg" alt="article1">
+        <img src="./gamers.jpg" alt="article1">
         <div class="homearticle-content">
-          <a href="/blog.html"><h3>Sunsets and effects</h3></a>
+          <a href="./blog.html"><h3>Sunsets and effects</h3></a>
           <span>A Singh</span>
           <span>14th October | 6 minutes read</span>
         </div>
