--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="./kawaiiplant.jpg" alt="article1" />
         <div class="homearticle-content">
           <a href="/blog.html"><h3>Root to leaf</h3></a>
-          <span>A Singh</span>
+          <div>A Singh</div>
           <span>5th January | 7 minutes read</span>
         </div>
       </div>
@@ -56,7 +56,7 @@
         <img src="./travel.jpg" alt="article1" />
         <div class="homearticle-content">
           <a href="/blog.html"><h3>Travel best insights</h3></a>
-          <span>K Singh</span>
+          <div>K Singh</div>
           <span>8th March | 10 minutes read</span>
         </div>
       </div>
@@ -64,7 +64,7 @@
         <img src="./furnico.jpg" alt="article1" />
         <div class="homearticle-content">
           <a href="/blog.html"><h3>Furnico for tomorrow</h3></a>
-          <span>A Singh</span>
+          <div>A Singh</div>
           <span>5th August | 5 minutes read</span>
         </div>
       </div>
@@ -72,7 +72,7 @@
         <img src="./gamers.JPG" alt="article1" />
         <div class="homearticle-content">
           <a href="/blog.html"><h3>Sunsets and effects</h3></a>
-          <span>A Singh</span>
+          <div>A Singh</div>
           <span>14th October | 6 minutes read</span>
         </div>
       </div>
